# SU_SOFT

./: .env  .env.local  .gitignore  Dockerfile  alembic.ini  channel.txt  docker-compose.yml  main.py  nextgen.py  pyproject.toml  requirements.txt  temp.py  texts.py
bot/: dialogs.py
bot/decorators/: dec_for_kb.py
bot/keyboards/: main_menu.py
bot/routers/: add.py  delete.py  edit.py  start.py
bot/states/: main.py  states.py
bot/windows/main/: menu.py  views.py
config/: settings.py
db/migrations/: env.py
db/migrations/versions/: 159785332b36_init.py  89809a7ab5e2_init.py  c29d1a4b599f_init.py
db/models/: base.py  channel.py  user.py
db/requests/: link.py
garbage/bot/: dialogs.py
garbage/bot/windows/main/: menu.py  views.py
soft/: main.py  mixer.py  soft.py  temp.py
soft/config/: settings.py
soft/session/56959965239/: 56959965239.json  56959965239.session  Accounts.txt  D877F783D5D3EF8Cs  Password2FA.txt
soft/utils/: auth.py  log_utils.py
utils/: log_utils.py  nextgen.py
