[tool.poetry]
name = "su-soft"
version = "0.1.0"
description = ""
authors = ["CHAMOMILE <CHAMOM2LES@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
aiogram = "3.6.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
telethon = "^1.36.0"
aiogram-widgets = "^1.2.7"
pyqt6 = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
